tests/golden/expected/relation_bad_inverse.stdout.txt
Compile error: tests/fixtures/relation_bad_inverse.lamp:9: type error: inverted field "dir" requires type "direction" to declare an "inverse" field of type "direction"
  9 | relation connects:
    | ^
